# Pagume

./: .gitignore  CMakeLists.txt  LICENSE  README.md  REUSE.toml
data/: io.github.wesenseged.Pagume.desktop  io.github.wesenseged.Pagume.metainfo.xml
src/: CMakeLists.txt  main.cpp
src/qml/: Main.qml
src/qml/pages/: About.qml  Calendar.qml  EthiopianCalendar.js  Fasting.qml  Holyday.qml
